# solafune-field-area-segmentation

./: .gitignore  pyproject.toml  train.sh
.github/workflows/: ci.yml
configs/: ex7.yaml  ex9.yaml
outputs/cline/: data_processing_flow.md  train_inference_tiling_plan.md  train_lr_scheduler_plan.md  wandb_integration_plan.md
src/: inference.py  main.py  test_inference.py  train.py  train_inference.py  train_lightgbm.py
src/models/: unet_maxvit.py
src/utils/: calc.py  dataset.py  helper_func.py
