[project]
name = "solafune-field-area-segmentation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "bitsandbytes>=0.45.3",
  "loguru>=0.7.2",
  "numba>=0.59",
  "omegaconf>=2.3",
  "optimum>=1.24",
  "optuna>=3.5",
  "pydantic==2.10.6",
  "pydantic-settings>=2.2.1",
  "rich>=10.12",
  "torch>=2.6",
  "torchvision>=0.21",
  "tqdm>=4.64.1",
  "typer>=0.9",
  "wandb>=0.16.4",
  "rasterio",
  "opencv-python>=4.0", # Added for cv2 import
  "albumentations>=1.0", # Added for A import
  "numpy>=1.20", # Added for np import (often a dependency, but good to be explicit)
  "shapely>=2.1.0",
  "scikit-image>=0.25.2",
  "timm>=1.0.15",
  "torchsummary>=1.5.1",
]

[tool.uv]
package = false
dev-dependencies = [
  "kaggle>=1.6.6",
  "notebook==7.3.2",
  "seaborn>=0.13.2",
  "streamlit>=1.43.2",
  "kagglehub>=0.3.10",
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
